[package]
name = "actix-taskqueue"
version = "0.1.0"
authors = ["Huy Tran <hey@huy.rocks>"]
description = "A generic task queue service for Actix"
license = "BSD 3-Clause Clear"
edition = "2018"
exclude = [
  "resources/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
crossbeam = "0.7.3"
async-trait = "0.1.37"
